MVP complete...hopefully

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,8 @@
 
     <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/results">Results</a></li>
+        <li><a href="/play">Play</a></li>
     </ul>
     <hr>
     {% block content %}
