--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,10 @@
 {% block content %}
 <h1>Rock, Paper, Scissors</h1>
 
-
-
-
+<p> Welcome to Rock, Paper, Scissors</p>
+<p>for two players type "/" player one's name "/" player one's choice
+    (rock, paper or scissors) into the url.
+</p>
+<p>followed byt "/" player two's name "/" player two's choice</p>
+<p>and your result will be loaded onto the screen!</p>
 {% endblock %}
