some more styling

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -4,7 +4,7 @@ body{
 }
 ul{
     display: flex;
-    
+
     
 }
 body > ul >li{
@@ -21,3 +21,22 @@ a{
     color: #3c6e71
 }
 
+.games{
+    display: grid;
+    background-color: #3c6e71;
+    border-radius: 5px;
+    margin: 10px;
+    order: 1-;
+}
+.games > ul > li {
+    list-style-type: none;
+}
+
+form {
+    background-color: #3c6e71;
+}
+#name, #name_2{
+    background-color: #3c6e71;
+    color: #D9D9D9;
+
+}
